KERN-566 Resolved the following FindBugs issues: Comparison of String parameter using == or != 	HttpMessageDecoder.java
Impossible cast from java.util.List to String	XMLMap.java
Method org.imsglobal.basiclti.XMLMap.recurse(Map, String, Node, boolean, int) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead
Method org.imsglobal.basiclti.XMLMap.flattenMap(Map) makes inefficient use of keySet iterator instead of entrySet iterator

Exception is caught when Exception is not thrown  BasicLTIConsumerServlet.java
Method org.sakaiproject.kernel.basiclti.BasicLTIConsumerServlet.doGet(SlingHttpServletRequest, SlingHttpServletResponse) makes inefficient  use of keySet iterator instead of entrySet iterator